Fixed Contrast Issues in Header img, Nav & Text

--- a/style.css
+++ b/style.css
@@ -190,6 +190,12 @@ margin: 12px;
 
 }
 
+footer a {
+    color: white!important;
+    text-decoration: none;
+}
+
+
 /* what I've added.. end */
 
 
@@ -416,7 +422,7 @@ margin: 12px;
     font-weight: 600;
     line-height: 44px;
     text-decoration: none;
-    margin-left: 5%;
+    margin-left: 4%;
     
 }
 
@@ -436,7 +442,7 @@ margin: 12px;
 }
 
 .navbar .nav {
-    padding: 2px 0px 38px 0;
+    padding: 2px 0px 35px 0;
    
     float: right;
     z-index: 1;
@@ -463,6 +469,11 @@ margin: 12px;
 .nav > li a:hover,
 .nav > li a:focus {
     background: transparent;
+}
+
+.nav > li a {
+    font-weight: 700;
+    color: rgb(92, 92, 131)!important;
 }
 
 .navbar-toggle {
@@ -550,8 +561,10 @@ margin: 12px;
 .nav > li > a {
     background: none!important;
     display: block;
-    padding: 5px;
+    padding: 5px 15px 5px 0px;
 }
+
+
 
 nav .caret {
     margin: 0 5px;
@@ -926,7 +939,7 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
@@ -1038,10 +1051,12 @@ margin: 0px 20px 0px 20px;
 }
 
 /*Tablet Portrait Med-width between 992px and 768px */
+
 @media (max-width: 992px) and (min-width: 768px) {
     .navbar .nav {
         max-width: 100%
     }
+    
     .nav-center.navbar .nav {
         max-width: 100%
     }
@@ -1051,10 +1066,14 @@ margin: 0px 20px 0px 20px;
     }
 
     .nav > li {
-margin: 0px 15px 0px 15px;
+        margin: 0px 15px 0px 15px;
+    }
+
+
+    .nav > li:last-child {
+        margin-right: 0px;
     }
 }
-
 
 /*Tablet Small size markup, up to 767px */
 @media (max-width: 767px) {
@@ -1071,8 +1090,22 @@ margin: 0px 15px 0px 15px;
     }
 
     .site-navigation {
-        line-height: 80px;
-        margin-left: 11%;
+        position: fixed;
+        width: 100%;
+        line-height: 69px;
+    
+        left: -100%;
+        text-align: center;
+        height: 81vh;
+        display: block;
+        margin: 10%;
+        margin-left: 5%;
+        margin-top: 3%;
+        margin-bottom: 1%;
+      
+            
+         
+    
     }
 
     .navbar-toggle {
@@ -1102,16 +1135,7 @@ margin: 0px 15px 0px 15px;
     }
     
     
-    .site-navigation {
-       
-        left: -100%;
-        width: 81%;
-        height: 88vh;
-        display: block;
-        margin-left: 5%;
-        
-     
-    }
+   
 
     .navbar.row {
         margin-left: 0;
@@ -1125,17 +1149,47 @@ margin: 0px 15px 0px 15px;
        
     }
 
+    .texture-paper::before {
+        opacity: 0.3;
+    }
+
 
 
     .nav > li {
        
         border-bottom: 1px solid rgba(0, 0, 0, .1);
-        background: rgba(0, 0, 0, .05);
         text-align: center;
-       border-radius: 15px;
+        border-radius: 31px;
         width: 100%;
         list-style: none;
+        margin-top: 18px;
+        width: 81%;
+        position: relative;
+        transition: all .5s;
+        
+
     }
+
+   
+
+    .nav > li::before {
+        content: "";
+        background-image: url("img/texture-paper.png");
+        background-size: cover;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: .5;
+        border-radius: 31px;
+
+    }
+
+    .nav li:first-child {
+        margin-top: 6px;
+        }
+
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
     }
@@ -1167,7 +1221,7 @@ margin: 0px 15px 0px 15px;
         box-shadow: none;
     }
     .navbar-brand {
-        margin-left: 5%;
+        margin-left: 4%;
     }
     .navbar-brand img {
         max-height: 40px;
